--- a/GoogleAnalytics/app/src/main/res/values/strings.xml
+++ b/GoogleAnalytics/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">GoogleAnalytics</string>
     <string name="title_activity_main">MainActivity</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="details_activity">details</string>
+    <string name="schedule_activity">Schedule</string>
+    <string name="title_activity_details">DetailsActivity</string>
+    <string name="label_details_activity">Hello World Details Activity</string>
+    <string name="title_activity_scheduling">scheduling</string>
+
+    <string name="label_schedule_activity">Hello World Schedule Activity!</string>
 </resources>
